Fixed store.user.id issue
Solution: I was refreshing the page. It worked all along.

Added some new js files to break up the game actions into diff files
Added some game board divs to index.html
Added some potential modal styling and commented it out
Started to plan the Game API functions in the planning.md file

Next will be to create the event handlers for the board

4/12 11:17am

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -1,2 +1,21 @@
 $icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
 @import '~bootstrap-sass/assets/stylesheets/bootstrap';
+
+
+
+
+
+
+
+// modal styling
+// .modal-body .form-horizontal .col-sm-2,
+// .modal-body .form-horizontal .col-sm-10 {
+//     width: 100%
+// }
+
+// .modal-body .form-horizontal .control-label {
+//     text-align: left;
+// }
+// .modal-body .form-horizontal .col-sm-offset-2 {
+//     margin-left: 15px;
+// }
