Working on game-events.js
Trying to start small, with one action, and then following it
to the result I want. Made the mistake of trying to complete
each page individually.

4/13 3:19pm

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -1,18 +1,10 @@
 $icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
 @import '~bootstrap-sass/assets/stylesheets/bootstrap';
 
-body {
-  background-color: grey;
-}
+@import 'theme';
 
 
-div .game-cell {
-  border: black 2px;
-  height: 100px;
-  margin: 5px;
-  width: 100px;
 
-}
 
 
 
