--- a/assets/styles/theme.scss
+++ b/assets/styles/theme.scss
@@ -8,12 +8,17 @@
   padding-bottom: 33.3333%;
   text-align: center;
   vertical-align: middle;
+}
+
+#start-new-game-button {
+  margin: auto;
+}
 
   // &:hover {
   //   background: tint($board-hover-blue, 75%);
   //   opacity: 20%;
   // }
-}
+
 
 
 // .auth-section-forms {
