--- a/assets/styles/theme.scss
+++ b/assets/styles/theme.scss
@@ -14,6 +14,9 @@
   margin: auto;
 }
 
+nav {
+  text-align: right;
+}
   // &:hover {
   //   background: tint($board-hover-blue, 75%);
   //   opacity: 20%;
